--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
